@@ -59,7 +59,9 @@ INSERTION_POINT
      <td bgcolor="%(margin_color)s"></td>
      <td width="100%%" bgcolor="%(margin_color)s">
       <p align=left><font size="-2">(Last updated on %(time_stamp)s.)</font></p>
-      <p align=right>Your <a href="mailto:comments@translationproject.org">comments</a> are welcome.</p>
+      <p align=right>
+       Your <a href="mailto:comments@translationproject.org">comments</a>
+       are welcome.</p>
      </td>
     </tr>
   </table>
