@@ -8,6 +8,10 @@
 	* web/html-to-cgi, web/to-html, web/registry.cgi.in: Recode a few
 	overlooked files to UTF-8, and adjust their doc strings.
 
+	* web/layout.html, lib/config.py, doc/Makefile, web/Makefile:
+	Rename layout.html to layout.html.in, to bring it in line with the
+	other .in files, and to make room for real html files.
+
 2007-06-22  Benno Schulenberg  <benno@vertaalt.nl>
 
 	* bin/i18n-aliases: Add the ability to generate a procmailrc
